--- a/style.css
+++ b/style.css
@@ -437,6 +437,11 @@ textarea:focus.error {
   display: flex;
   align-items: center;
   justify-content: center;
+  outline: none;
+}
+
+.toggle-visibility:focus {
+  outline: none;
 }
 
 .toggle-visibility img {
